refactor(api): simplify model (no company_id etc) and set up migrations
